--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+#active-btn {
+  color: aqua;
+}
+
 body {
   font-family: Arial, sans-serif;
   background: url('Yaz.jpg');
@@ -49,6 +53,12 @@ nav a:hover {
   background-color: rgba(60, 137, 153, 1);
 }
 
+nav.show a {
+  display: block;
+  margin: 10px 0;
+  text-align: center;
+}
+
 .content {
   grid-column: 1 / 11;
   display: grid;
@@ -72,29 +82,29 @@ nav a:hover {
 
 .profile {
   grid-column: 8 / 10;
-  width: 100%;        
-  aspect-ratio: 1 / 1; 
+  width: 100%;
+  aspect-ratio: 1 / 1;
   border-radius: 50%;
   object-fit: cover;
 }
 
-  .menu-toggle {
-    display: none;
-  }
+.menu-toggle {
+  display: none;
+}
 
-  @media (max-width: 1700px) {
+@media (max-width: 1700px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 6vh;
     padding: 5vh 0 0 0;
     margin: 0;
-    text-align: center; 
+    text-align: center;
   }
 
   nav {
     grid-column: 1 / 11;
-    grid-row: 2 / 3; 
+    grid-row: 2 / 3;
     display: flex;
     justify-content: center;
     gap: 3vh;
@@ -105,8 +115,8 @@ nav a:hover {
     grid-row: 2 / 3;
   }
 
-    nav a {
-    font-size: 3vh ;
+  nav a {
+    font-size: 3vh;
   }
 
   .profile {
@@ -129,10 +139,10 @@ nav a:hover {
   }
 }
 
-  @media (max-width: 1300px) {
+@media (max-width: 1300px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 5.5vh;
     padding: 5vh 0 0 0;
     margin: 0;
@@ -152,13 +162,13 @@ nav a:hover {
     grid-row: 2 / 3;
   }
 
-    nav a {
-    font-size: 2.5vh ;
+  nav a {
+    font-size: 2.5vh;
   }
 
   .profile {
     grid-column: 8 / 10;
-    grid-row: 3 / 4; 
+    grid-row: 3 / 4;
     padding: 0;
     justify-self: center;
     width: 100%;
@@ -179,34 +189,33 @@ nav a:hover {
 @media (max-width: 1000px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 5vh;
     padding: 5vh 0 0 0;
     margin: 0;
-    text-align: center; 
+    text-align: center;
   }
 
   nav {
     grid-column: 1 / 11;
-    grid-row: 2 / 3; 
+    grid-row: 2 / 3;
     display: flex;
     justify-content: center;
     gap: 3vh;
     margin-top: 1.5vh;
-
   }
 
   nav ul {
     grid-row: 2 / 3;
   }
 
-      nav a {
-    font-size: 2vh ;
+  nav a {
+    font-size: 2vh;
   }
 
   .profile {
     grid-column: 4 / 8;
-    grid-row: 3 / 4; 
+    grid-row: 3 / 4;
     padding: 0;
     justify-self: center;
     width: 80%;
@@ -225,18 +234,17 @@ nav a:hover {
   }
 }
 
-
 @media (max-width: 700px) {
   h1 {
-    grid-column: 1/11;
-     grid-row: 1 / 2; 
+    grid-column: 1 / 11;
+    grid-row: 1 / 2;
     font-size: 4vh;
     padding: 0;
     margin: 0;
   }
 
   .menu-toggle {
-    grid-row: 2/3;
+    grid-row: 2 / 3;
     display: block;
     font-size: 2.5vh;
     color: black;
@@ -269,28 +277,23 @@ nav a:hover {
   }
 }
 
-
 @media (max-width: 400px) {
   h1 {
-    grid-column: 1/11;
-    grid-row: 1 / 2; 
+    grid-column: 1 / 11;
+    grid-row: 1 / 2;
     font-size: 3.5vh;
     padding: 0;
     margin: 0;
   }
 
   .menu-toggle {
-    grid-row: 2/3;
+    grid-row: 2 / 3;
     display: block;
     font-size: 2.5vh;
     color: black;
     position: relative;
     top: 3.4vh;
     left: 2vh;
-  }
-
-  nav a {
-    display: none;
   }
 
   .profile {
@@ -310,5 +313,54 @@ nav a:hover {
   .text p {
     font-size: 3.5vw;
     margin: 0 auto;
+  }
+}
+
+@media (max-width: 300px) {
+  h1 {
+    grid-column: 1 / 11;
+    grid-row: 1 / 2;
+    font-size: 3vh;
+    padding: 0;
+    margin: 0;
+  }
+
+  .menu-toggle {
+    grid-row: 2 / 3;
+    display: block;
+    font-size: 2vh;
+    color: black;
+    position: relative;
+    top: 3vh;
+    left: 2vh;
+  }
+
+  .profile {
+    grid-column: 4 / 8;
+    grid-row: 1 / 1;
+    padding: 0;
+    justify-self: center;
+  }
+
+  .text {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    text-align: justify;
+    padding-top: 2.5vh;
+  }
+
+  .text p {
+    font-size: 3.2vw;
+    margin: 0 auto;
+  }
+}
+.menu-toggle {
+  cursor: pointer;
+  z-index: 1000;
+}
+
+@media (max-width: 700px) {
+  #navMenu.show a {
+    display: block;
   }
 }
