--- a/about.css
+++ b/about.css
@@ -56,6 +56,7 @@ nav a:hover {
 nav.show a {
   display: block;
   margin: 10px 0;
+  text-align: center;
 }
 
 .content {
@@ -114,37 +115,68 @@ nav.show a {
 
 .menu-toggle {
   display: none;
+  cursor: pointer;
+}
+
+@media (max-width: 1700px) {
+  h1 {
+    font-size: 6vh;
+    margin-top: 20px;
+  }
+  .text p {
+    font-size: 4.5vh;
+  }
+  .text ul {
+    font-size: 3.2vh;
+  }
+  .tech-icon {
+    width: 65px;
+    height: 65px;
+  }
+}
+
+@media (max-width: 1300px) {
+  h1 {
+    font-size: 5.5vh;
+  }
+  nav a {
+    font-size: 2.8vh;
+  }
+  .text p {
+    font-size: 4vh;
+  }
+  .text ul {
+    font-size: 3vh;
+  }
+  .tech-icon {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 @media (max-width: 1000px) {
   h1 {
     font-size: 5vh;
   }
-
   nav a {
     font-size: 2vh;
   }
-
   .profile {
     grid-column: 4 / 8;
     grid-row: 3 / 4;
     width: 80%;
   }
-
   .text {
     grid-column: 2 / 10;
     grid-row: 4 / 5;
     padding-top: 3.5vh;
   }
-
   .text p {
     font-size: 3.9vw;
   }
-
   .text ul {
     font-size: 3.5vw;
   }
-
   .tech-icon {
     width: 60px;
     height: 60px;
@@ -155,7 +187,6 @@ nav.show a {
   h1 {
     font-size: 4vh;
   }
-
   .menu-toggle {
     display: block;
     font-size: 2.5vh;
@@ -163,32 +194,32 @@ nav.show a {
     position: relative;
     top: 3.8vh;
     left: 2vh;
+    z-index: 1000;
   }
-
   nav a {
     display: none;
   }
-
+  nav.show a {
+    display: block;
+    margin: 10px 0;
+    text-align: center;
+  }
   .profile {
     grid-column: 4 / 8;
     grid-row: 2 / 3;
     width: 80%;
   }
-
   .text {
     grid-column: 2 / 10;
     grid-row: 3 / 4;
     padding-top: 3.5vh;
   }
-
   .text p {
     font-size: 3.9vw;
   }
-
   .text ul {
     font-size: 3.5vw;
   }
-
   .tech-icon {
     width: 60px;
     height: 60px;
@@ -199,24 +230,19 @@ nav.show a {
   h1 {
     font-size: 3.5vh;
   }
-
   .menu-toggle {
     top: 3.4vh;
   }
-
   .profile {
     grid-column: 3 / 9;
     width: 85%;
   }
-
   .text p {
     font-size: 3.5vw;
   }
-
   .text ul {
     font-size: 3.2vw;
   }
-
   .tech-icon {
     width: 50px;
     height: 50px;
@@ -227,36 +253,21 @@ nav.show a {
   h1 {
     font-size: 3vh;
   }
-
   .menu-toggle {
     top: 3vh;
   }
-
   .profile {
     grid-column: 3 / 9;
     width: 85%;
   }
-
   .text p {
     font-size: 3.2vw;
   }
-
   .text ul {
     font-size: 2.8vw;
   }
-
   .tech-icon {
     width: 40px;
     height: 40px;
-  }
-}
-.menu-toggle {
-  cursor: pointer;
-  z-index: 1000;
-}
-
-@media (max-width: 700px) {
-  #navMenu.show a {
-    display: block;
   }
 }
