--- a/contact.css
+++ b/contact.css
@@ -53,6 +53,12 @@ nav a:hover {
   background-color: rgba(60, 137, 153, 1);
 }
 
+nav.show a {
+  display: block;
+  margin: 10px 0;
+  text-align: center;
+}
+
 .content {
   grid-column: 1 / 11;
   display: grid;
@@ -94,27 +100,50 @@ nav a:hover {
   cursor: pointer;
 }
 
+@media (max-width: 1700px) {
+  h1 {
+    font-size: 6vh;
+  }
+  .text p {
+    font-size: 3.2vh;
+  }
+  .profile {
+    width: 95%;
+  }
+}
+
+@media (max-width: 1300px) {
+  h1 {
+    font-size: 5.5vh;
+  }
+  nav a {
+    font-size: 2.8vh;
+  }
+  .text p {
+    font-size: 3vh;
+  }
+  .profile {
+    width: 90%;
+  }
+}
+
 @media (max-width: 1000px) {
   h1 {
     font-size: 5vh;
   }
-
   nav a {
     font-size: 2.2vh;
   }
-
   .profile {
     grid-column: 4 / 8;
     grid-row: 3 / 4;
     width: 80%;
   }
-
   .text {
     grid-column: 2 / 10;
     grid-row: 4 / 5;
     padding-top: 3vh;
   }
-
   .text p {
     font-size: 4vw;
   }
@@ -124,34 +153,28 @@ nav a:hover {
   h1 {
     font-size: 4vh;
   }
-
   .menu-toggle {
     display: block;
     font-size: 3vh;
     color: black;
     margin: 20px;
   }
-
   nav a {
     display: none;
   }
-
   nav.show a {
     display: block;
     margin: 10px 0;
   }
-
   .profile {
     grid-column: 4 / 8;
     grid-row: 2 / 3;
     width: 80%;
   }
-
   .text {
     grid-column: 2 / 10;
     grid-row: 3 / 4;
   }
-
   .text p {
     font-size: 4vw;
   }
@@ -161,18 +184,15 @@ nav a:hover {
   h1 {
     font-size: 3.2vh;
   }
-
   .menu-toggle {
     display: block;
     font-size: 3vh;
     margin: 15px;
   }
-
   .profile {
     grid-column: 3 / 9;
     width: 85%;
   }
-
   .text p {
     font-size: 3.5vw;
   }
@@ -182,29 +202,16 @@ nav a:hover {
   h1 {
     font-size: 3vh;
   }
-
   .menu-toggle {
     display: block;
     font-size: 2.5vh;
     margin: 10px;
   }
-
   .profile {
     grid-column: 3 / 9;
     width: 90%;
   }
-
   .text p {
     font-size: 3.2vw;
-  }
-}
-.menu-toggle {
-  cursor: pointer;
-  z-index: 1000;
-}
-
-@media (max-width: 700px) {
-  #navMenu.show a {
-    display: block;
   }
 }
