--- a/style.css
+++ b/style.css
@@ -1,314 +1,374 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
+#active-btn { 
+  color: aqua;
+}
 body {
-  font-family: Arial, sans-serif;
-  background: url('Yaz.jpg');
-  background-size: cover;
-  color: white;
-  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  background: url('Yaz.jpg');
+  background-size: cover;
+  color: white;
+  min-height: 100vh;
 }
-
 .container {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  text-align: center;
 }
-
 h1 {
-  grid-column: 1 / 11;
-  font-size: 7vh;
-  color: black;
-  font-family: "Italiana", serif;
-  margin-top: 20px;
+  grid-column: 1 / 11;
+  font-size: 7vh;
+  color: black;
+  font-family: "Italiana", serif;
+  margin-top: 20px;
 }
-
 nav {
-  grid-column: 1 / 11;
-  display: flex;
-  justify-content: center;
-  gap: 4vh;
-  margin-top: 20px;
+  grid-column: 1 / 11;
+  display: flex;
+  justify-content: center;
+  gap: 4vh;
+  margin-top: 20px;
 }
-
 nav a {
-  text-decoration: none;
-  color: white;
-  background-color: rgba(60, 137, 153, 0.8);
-  padding: 1.5vh 4vh;
-  border-radius: 5vh;
-  font-size: 3vh;
-  transition: background 0.3s;
-  font-family: "Italiana", serif;
+  text-decoration: none;
+  color: white;
+  background-color: rgba(60, 137, 153, 0.8);
+  padding: 1.5vh 4vh;
+  border-radius: 5vh;
+  font-size: 3vh;
+  transition: background 0.3s;
+  font-family: "Italiana", serif;
 }
-
 nav a:hover {
-  background-color: rgba(60, 137, 153, 1);
+  background-color: rgba(60, 137, 153, 1);
 }
-
+nav.show {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgba(60, 137, 153, 0.9);
+  position: absolute;
+  top: 8vh;
+  left: 2vh;
+  padding: 1vh 2vh;
+  border-radius: 1vh;
+  gap: 1vh;
+  z-index: 100;
+}
+nav.show a {
+  display: block;
+  margin: 0.5vh 0;
+  text-align: left;
+  font-size: 2.2vh;
+  padding: 1vh 2vh;
+  width: auto;
+}
 .content {
-  grid-column: 1 / 11;
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  align-items: center;
-  justify-items: center;
-  margin-top: 10vh;
+  grid-column: 1 / 11;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  align-items: center;
+  justify-items: center;
+  margin-top: 10vh;
 }
-
 .text {
-  grid-column: 2 / 7;
-  text-align: left;
+  grid-column: 2 / 7;
+  text-align: left;
 }
-
 .text p {
-  font-size: 5vh;
-  font-family: "Itim", cursive;
-  margin-bottom: 10px;
-  line-height: 1.3;
+  font-size: 5vh;
+  font-family: "Itim", cursive;
+  margin-bottom: 10px;
+  line-height: 1.3;
 }
-
 .profile {
-  grid-column: 8 / 10;
-  width: 100%;        
-  aspect-ratio: 1 / 1; 
-  border-radius: 50%;
-  object-fit: cover;
+  grid-column: 8 / 10;
+  width: 100%;        
+  aspect-ratio: 1 / 1; 
+  border-radius: 50%;
+  object-fit: cover;
+}
+.menu-toggle {
+  display: none;
+  cursor: pointer;
 }
 
-  .menu-toggle {
-    display: none;
-  }
+  @media (max-width: 1700px) {
+  h1 {
+    grid-column: 1 / 11;
+    grid-row: 1 / 2; 
+    font-size: 6vh;
+    padding: 5vh 0 0 0;
+    margin: 0;
+    text-align: center; 
+  }
 
-  @media (max-width: 1700px) {
-  h1 {
-    grid-column: 1 / 11;
-    grid-row: 1 / 2; 
-    font-size: 6vh;
-    padding: 5vh 0 0 0;
-    margin: 0;
-    text-align: center; 
-  }
+  nav {
+    grid-column: 1 / 11;
+    grid-row: 2 / 3; 
+    display: flex;
+    justify-content: center;
+    gap: 3vh;
+    margin-top: 1.5vh;
+  }
 
-  nav {
-    grid-column: 1 / 11;
-    grid-row: 2 / 3; 
-    display: flex;
-    justify-content: center;
-    gap: 3vh;
-    margin-top: 1.5vh;
-  }
+  nav ul {
+    grid-row: 2 / 3;
+  }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
+    nav a {
+    font-size: 3vh ;
+  }
 
-    nav a {
-    font-size: 3vh ;
-  }
+  .profile {
+    grid-column: 8 / 10;
+    grid-row: 3 / 4;
+    padding: 0;
+    justify-self: center;
+    width: 100%;
+  }
 
-  .profile {
-    grid-column: 8 / 10;
-    grid-row: 3 / 4;
-    padding: 0;
-    justify-self: center;
-    width: 100%;
-  }
+  .text {
+    grid-column: 1 / 8;
+    grid-row: 3 / 4;
+    text-align: justify;
+  }
 
-  .text {
-    grid-column: 1 / 8;
-    grid-row: 3 / 4;
-    text-align: justify;
-  }
-
-  .text p {
-    font-size: 3vw;
-    margin: 0 auto;
-  }
+  .text p {
+    font-size: 3vw;
+    margin: 0 auto;
+  }
 }
 
-  @media (max-width: 1300px) {
-  h1 {
-    grid-column: 1 / 11;
-    grid-row: 1 / 2; 
-    font-size: 5.5vh;
-    padding: 5vh 0 0 0;
-    margin: 0;
-    text-align: center;
-  }
+  @media (max-width: 1300px) {
+  h1 {
+    grid-column: 1 / 11;
+    grid-row: 1 / 2; 
+    font-size: 5.5vh;
+    padding: 5vh 0 0 0;
+    margin: 0;
+    text-align: center;
+  }
 
-  nav {
-    grid-column: 1 / 11;
-    grid-row: 2 / 3;
-    display: flex;
-    justify-content: center;
-    gap: 3vh;
-    margin-top: 1.5vh;
-  }
+  nav {
+    grid-column: 1 / 11;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+    gap: 3vh;
+    margin-top: 1.5vh;
+  }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
+  nav ul {
+    grid-row: 2 / 3;
+  }
 
-    nav a {
-    font-size: 2.5vh ;
-  }
+    nav a {
+    font-size: 2.5vh ;
+  }
 
-  .profile {
-    grid-column: 8 / 10;
-    grid-row: 3 / 4; 
-    padding: 0;
-    justify-self: center;
-    width: 100%;
-  }
+  .profile {
+    grid-column: 8 / 10;
+    grid-row: 3 / 4; 
+    padding: 0;
+    justify-self: center;
+    width: 100%;
+  }
 
-  .text {
-    grid-column: 1 / 8;
-    grid-row: 3 / 4;
-    text-align: justify;
-  }
+  .text {
+    grid-column: 1 / 8;
+    grid-row: 3 / 4;
+    text-align: justify;
+  }
 
-  .text p {
-    font-size: 3vw;
-    margin: 0 auto;
-  }
-}
+  .text p {
+    font-size: 3vw;
+    margin: 0 auto;
+  }
+}@media (max-width: 1000px) {
+  h1 {
+    grid-column: 1 / 11;
+    grid-row: 1 / 2; 
+    font-size: 5vh;
+    padding: 5vh 0 0 0;
+    margin: 0;
+    text-align: center; 
+  }
 
-@media (max-width: 1000px) {
-  h1 {
-    grid-column: 1 / 11;
-    grid-row: 1 / 2; 
-    font-size: 5vh;
-    padding: 5vh 0 0 0;
-    margin: 0;
-    text-align: center; 
-  }
+  nav {
+    grid-column: 1 / 11;
+    grid-row: 2 / 3; 
+    display: flex;
+    justify-content: center;
+    gap: 3vh;
+    margin-top: 1.5vh;
 
-  nav {
-    grid-column: 1 / 11;
-    grid-row: 2 / 3; 
-    display: flex;
-    justify-content: center;
-    gap: 3vh;
-    margin-top: 1.5vh;
+  }
 
-  }
+  nav ul {
+    grid-row: 2 / 3;
+  }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
+      nav a {
+    font-size: 2vh ;
+  }
 
-      nav a {
-    font-size: 2vh ;
-  }
+  .profile {
+    grid-column: 4 / 8;
+    grid-row: 3 / 4; 
+    padding: 0;
+    justify-self: center;
+    width: 80%;
+  }
 
-  .profile {
-    grid-column: 4 / 8;
-    grid-row: 3 / 4; 
-    padding: 0;
-    justify-self: center;
-    width: 80%;
-  }
+  .text {
+    grid-column: 2 / 10;
+    grid-row: 4 / 5;
+    text-align: justify;
+    padding-top: 3.5vh;
+  }
 
-  .text {
-    grid-column: 2 / 10;
-    grid-row: 4 / 5;
-    text-align: justify;
-    padding-top: 3.5vh;
-  }
+  .text p {
+    font-size: 3.9vw;
+    margin: 0 auto;
+  }
+}@media (max-width: 700px) {
+  h1 {
+    grid-column: 1/11;
+    grid-row: 1 / 2; 
+    font-size: 4vh;
+    padding: 0;
+    margin: 0;
+  }
 
-  .text p {
-    font-size: 3.9vw;
-    margin: 0 auto;
-  }
-}
+  .menu-toggle {
+    grid-row: 2/3;
+    display: block;
+    font-size: 2.5vh;
+    color: black;
+    position: relative;
+    top: 3.8vh;
+    left: 2vh;
+    z-index: 1000;
+  }
+  
+  nav {
+    display: none;
+  }
 
+  nav.show {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: rgba(60, 137, 153, 0.9);
+    position: absolute;
+    top: 8vh;
+    left: 2vh;
+    padding: 1vh 2vh;
+    border-radius: 1vh;
+    gap: 1vh;
+  }
 
-@media (max-width: 700px) {
-  h1 {
-    grid-column: 1/11;
-     grid-row: 1 / 2; 
-    font-size: 4vh;
-    padding: 0;
-    margin: 0;
-  }
+  nav.show a {
+    display: block;
+    margin: 0.5vh 0;
+    text-align: left;
+    font-size: 2.2vh;
+    padding: 1vh 2vh;
+    width: auto;
+  }
+  
+  .profile {
+    grid-column: 4 / 8;
+    grid-row: 1 / 1;
+    padding: 0;
+    justify-self: center;
+  }
 
-  .menu-toggle {
-    grid-row: 2/3;
-    display: block;
-    font-size: 2.5vh;
-    color: black;
-    position: relative;
-    top: 3.8vh;
-    left: 2vh;
-  }
+  .text {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    text-align: justify;
+    padding-top: 3.5vh;
+  }
 
-  nav a {
-    display: none;
-  }
+  .text p {
+    font-size: 3.9vw;
+    margin: 0 auto;
+  }
+}@media (max-width: 400px) {
+  h1 {
+    grid-column: 1/11;
+    grid-row: 1 / 2; 
+    font-size: 3.5vh;
+    padding: 0;
+    margin: 0;
+  }
 
-  .profile {
-    grid-column: 4 / 8;
-    grid-row: 1 / 1;
-    padding: 0;
-    justify-self: center;
-  }
+  .menu-toggle {
+    grid-row: 2/3;
+    display: block;
+    font-size: 2.5vh;
+    color: black;
+    position: relative;
+    top: 3.4vh;
+    left: 2vh;
+  }
+  
+  nav.show {
+    top: 7vh;
+  }
+  nav.show a {
+    font-size: 2vh;
+    padding: 0.8vh 1.5vh;
+  }
+  
+  .profile {
+    grid-column: 4 / 8;
+    grid-row: 1 / 1;
+    padding: 0;
+    justify-self: center;
+  }
 
-  .text {
-    grid-column: 2 / 10;
-    grid-row: 2 / 3;
-    text-align: justify;
-    padding-top: 3.5vh;
-  }
+  .text {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    text-align: justify;
+    padding-top: 3vh;
+  }
 
-  .text p {
-    font-size: 3.9vw;
-    margin: 0 auto;
-  }
-}
-
-
-@media (max-width: 400px) {
-  h1 {
-    grid-column: 1/11;
-    grid-row: 1 / 2; 
-    font-size: 3.5vh;
-    padding: 0;
-    margin: 0;
-  }
-
-  .menu-toggle {
-    grid-row: 2/3;
-    display: block;
-    font-size: 2.5vh;
-    color: black;
-    position: relative;
-    top: 3.4vh;
-    left: 2vh;
-  }
-
-  nav a {
-    display: none;
-  }
-
-  .profile {
-    grid-column: 4 / 8;
-    grid-row: 1 / 1;
-    padding: 0;
-    justify-self: center;
-  }
-
-  .text {
-    grid-column: 2 / 10;
-    grid-row: 2 / 3;
-    text-align: justify;
-    padding-top: 3vh;
-  }
-
-  .text p {
-    font-size: 3.5vw;
-    margin: 0 auto;
-  }
+  .text p {
+    font-size: 3.5vw;
+    margin: 0 auto;
+  }
+}@media (max-width: 300px) {
+  h1 {
+    font-size: 3vh;
+  }
+  .menu-toggle {
+    font-size: 2vh;
+    top: 3vh;
+  }
+  nav.show {
+    top: 6vh;
+  }
+  nav.show a {
+    font-size: 1.8vh;
+    padding: 0.7vh 1.2vh;
+  }
+  .profile {
+    grid-column: 4 / 8;
+    grid-row: 1 / 1;
+  }
+  .text {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    padding-top: 2.5vh;
+  }
+  .text p {
+    font-size: 3.2vw;
+  }
 }
