--- a/style.css
+++ b/style.css
@@ -72,41 +72,37 @@ nav a:hover {
 
 .profile {
   grid-column: 8 / 10;
-  width: 100%;        
-  aspect-ratio: 1 / 1; 
+  width: 100%;
+  aspect-ratio: 1 / 1;
   border-radius: 50%;
   object-fit: cover;
 }
 
-  .menu-toggle {
-    display: none;
-  }
+.menu-toggle {
+  display: none;
+}
 
-  @media (max-width: 1700px) {
+@media (max-width: 1700px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 6vh;
     padding: 5vh 0 0 0;
     margin: 0;
-    text-align: center; 
+    text-align: center;
   }
 
   nav {
     grid-column: 1 / 11;
-    grid-row: 2 / 3; 
+    grid-row: 2 / 3;
     display: flex;
     justify-content: center;
     gap: 3vh;
     margin-top: 1.5vh;
   }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
-
-    nav a {
-    font-size: 3vh ;
+  nav a {
+    font-size: 3vh;
   }
 
   .profile {
@@ -129,10 +125,10 @@ nav a:hover {
   }
 }
 
-  @media (max-width: 1300px) {
+@media (max-width: 1300px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 5.5vh;
     padding: 5vh 0 0 0;
     margin: 0;
@@ -148,17 +144,13 @@ nav a:hover {
     margin-top: 1.5vh;
   }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
-
-    nav a {
-    font-size: 2.5vh ;
+  nav a {
+    font-size: 2.5vh;
   }
 
   .profile {
     grid-column: 8 / 10;
-    grid-row: 3 / 4; 
+    grid-row: 3 / 4;
     padding: 0;
     justify-self: center;
     width: 100%;
@@ -179,34 +171,29 @@ nav a:hover {
 @media (max-width: 1000px) {
   h1 {
     grid-column: 1 / 11;
-    grid-row: 1 / 2; 
+    grid-row: 1 / 2;
     font-size: 5vh;
     padding: 5vh 0 0 0;
     margin: 0;
-    text-align: center; 
+    text-align: center;
   }
 
   nav {
     grid-column: 1 / 11;
-    grid-row: 2 / 3; 
+    grid-row: 2 / 3;
     display: flex;
     justify-content: center;
     gap: 3vh;
     margin-top: 1.5vh;
-
   }
 
-  nav ul {
-    grid-row: 2 / 3;
-  }
-
-      nav a {
-    font-size: 2vh ;
+  nav a {
+    font-size: 2vh;
   }
 
   .profile {
     grid-column: 4 / 8;
-    grid-row: 3 / 4; 
+    grid-row: 3 / 4;
     padding: 0;
     justify-self: center;
     width: 80%;
@@ -225,18 +212,17 @@ nav a:hover {
   }
 }
 
-
 @media (max-width: 700px) {
   h1 {
-    grid-column: 1/11;
-     grid-row: 1 / 2; 
+    grid-column: 1 / 11;
+    grid-row: 1 / 2;
     font-size: 4vh;
     padding: 0;
     margin: 0;
   }
 
   .menu-toggle {
-    grid-row: 2/3;
+    grid-row: 2 / 3;
     display: block;
     font-size: 2.5vh;
     color: black;
@@ -267,20 +253,25 @@ nav a:hover {
     font-size: 3.9vw;
     margin: 0 auto;
   }
-}
 
+  nav.show a {
+    display: block;
+    margin: 1vh 0;
+    text-align: center;
+  }
+}
 
 @media (max-width: 400px) {
   h1 {
-    grid-column: 1/11;
-    grid-row: 1 / 2; 
+    grid-column: 1 / 11;
+    grid-row: 1 / 2;
     font-size: 3.5vh;
     padding: 0;
     margin: 0;
   }
 
   .menu-toggle {
-    grid-row: 2/3;
+    grid-row: 2 / 3;
     display: block;
     font-size: 2.5vh;
     color: black;
@@ -310,5 +301,11 @@ nav a:hover {
   .text p {
     font-size: 3.5vw;
     margin: 0 auto;
+  }
+
+  nav.show a {
+    display: block;
+    margin: 1vh 0;
+    text-align: center;
   }
 }
